2025-06-19T02:09:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15747722759 # 1047
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-19
* notice: last 14d: unq all: 13 36
* notice: prev accum: outdated-unq outdated-all / unq all: 1111 5593 / 1127 5649
* notice: next accum: outdated-unq outdated-all / unq all: 1113 5613 / 1127 5649
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-06-04] / []

2025-06-18T02:08:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15722215681 # 1045
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-18
* notice: last 14d: unq all: 15 56
* notice: prev accum: outdated-unq outdated-all / unq all: 1111 5593 / 1125 5629
* notice: next accum: outdated-unq outdated-all / unq all: 1111 5593 / 1127 5649
* notice: prev exec diff / last date diff / accum: unq all: +2 +20 -0 -0 / +3 +21 -0 -0 / 3 21
* notice: removed / changed dates: [] / [2025-06-17]

2025-06-17T12:55:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15707832150 # 1044
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-17
* notice: last 14d: unq all: 13 36
* notice: prev accum: outdated-unq outdated-all / unq all: 1110 5592 / 1124 5628
* notice: next accum: outdated-unq outdated-all / unq all: 1111 5593 / 1125 5629
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-03] / [2025-06-17]

2025-06-17T02:09:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15696372215 # 1043