@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-19T02:09:04Z",
+  "timestamp" : "2025-06-19T12:54:39Z",
   "count_outdated" : 5613,
   "uniques_outdated" : 1113,
-  "count" : 5649,
-  "uniques" : 1127,
+  "count" : 5651,
+  "uniques" : 1128,
   "views" : [
     {
       "timestamp": "2025-06-09T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-06-19T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
