@@ -1,6 +1,6 @@
 {
-  "count": 36,
-  "uniques": 13,
+  "count": 38,
+  "uniques": 14,
   "views": [
     {
       "timestamp": "2025-06-09T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2025-06-17T00:00:00Z",
       "count": 21,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-06-19T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
